<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.AddPostFragment">

    <data>
        <variable
            name="vm"
            type="com.carlostorres.promassblog.ui.viewmodels.AddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputTitle"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginVertical="@dimen/margin_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_input"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/title_input"
                android:text="@={vm.title}"
                onTextChanged="@{vm::onWatchTitle}"
                android:singleLine="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputAuthor"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author_input"
            app:layout_constraintTop_toBottomOf="@+id/textInputTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/author_input"
                android:text="@={vm.author}"
                onTextChanged="@{vm::onWatchAuthor}"
                android:singleLine="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputOverview"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/overview_input"
            app:layout_constraintTop_toBottomOf="@+id/textInputAuthor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/overview_input"
                android:text="@={vm.overview}"
                onTextChanged="@{vm::onWatchOverview}"
                android:singleLine="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_marginBottom="@dimen/margin_32"
            android:clickable="true"
            android:contentDescription="@string/check_floating_button_tool"
            android:focusable="true"
            android:src="@drawable/ic_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>